# libft

./: .gitignore  CMakeLists.txt  Makefile
includes/: array.h  errors.h  get_next_line.h  libft.h  lst.h  out.h  str.h  stringbuffer.h
srcs/: ft_array_delete_all.c  ft_array_insert.c  ft_atoi.c  ft_bubble_sort.c  ft_intlen.c  ft_itoa.c  ft_putnbr_fd.c  ft_qsort.c  ft_strlcat.c  get_next_line.c
srcs/array/: ft_array_add.c  ft_array_foreach.c  ft_array_get.c  ft_array_init.c  ft_array_insert.c  ft_array_remove.c  ft_array_remove_all.c  ft_array_size.c
srcs/get_next_line/: get_next_line.c
srcs/lst/: ft_lstaddrevsorted.c  ft_lstaddsorted.c  ft_lstget.c  ft_lstmap.c  ft_lstnew.c  ft_lstnewblank.c  ft_lstsize.c
srcs/mem/: ft_calloc.c  ft_intlen.c  ft_memcmp.c  ft_memmove.c
srcs/oth/: ft_abs.c  ft_bubble_sort.c  ft_getc.c  ft_max.c  ft_min.c  ft_qsort.c  ft_queue_add.c  ft_queue_poll.c  ft_stack_delall.c  ft_stack_init.c  ft_stack_pop.c  ft_stack_push.c  ft_swapvals.c
srcs/str/: ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_safe_atoi.c  ft_strchr.c  ft_strcmp.c  ft_strequ.c  ft_strlcpy.c  ft_strncmp.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strtol.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  ft_trim_spaces.c
srcs/str/stringbuffer/: ft_sbappendchar.c  ft_sbappendstr.c  ft_sbclear.c  ft_sbdelete.c  ft_sbget.c  ft_sbinit.c  ft_sblen.c  ft_sbnew.c  ft_sbremove.c
