cmake_minimum_required(VERSION 3.15)
project(ft C)

set(CMAKE_C_STANDARD 11)

include_directories(ft
        includes)
add_library(ft
        srcs/ft_abs.c
        srcs/ft_array_add.c
        srcs/ft_array_delete_all.c
        srcs/ft_array_foreach.c
        srcs/ft_array_get.c
        srcs/ft_array_init.c
        srcs/ft_array_insert.c
        srcs/ft_array_new.c
        srcs/ft_array_remove.c
        srcs/ft_array_remove_all.c
        srcs/ft_array_size.c
        srcs/ft_atoi.c
        srcs/ft_bubble_sort.c
        srcs/ft_bzero.c
        srcs/ft_calloc.c
        srcs/ft_getc.c
        srcs/ft_intmove.c
        srcs/ft_isalnum.c
        srcs/ft_isalpha.c
        srcs/ft_isascii.c
        srcs/ft_isdigit.c
        srcs/ft_isprint.c
        srcs/ft_isspace.c
        srcs/ft_itoa.c
        srcs/ft_lstadd.c
        srcs/ft_lstadd_back.c
        srcs/ft_lstaddblank.c
        srcs/ft_lstaddrevsorted.c
        srcs/ft_lstaddsorted.c
        srcs/ft_lstdel.c
        srcs/ft_lstdelone.c
        srcs/ft_lstfind.c
        srcs/ft_lstget.c
        srcs/ft_lstiter.c
        srcs/ft_lstmap.c
        srcs/ft_lstnew.c
        srcs/ft_lstnewblank.c
        srcs/ft_lstremove_if.c
        srcs/ft_lstsize.c
        srcs/ft_max.c
        srcs/ft_memalloc.c
        srcs/ft_memccpy.c
        srcs/ft_memchr.c
        srcs/ft_memcmp.c
        srcs/ft_memcpy.c
        srcs/ft_memdel.c
        srcs/ft_memmove.c
        srcs/ft_memndup.c
        srcs/ft_memrealloc.c
        srcs/ft_memset.c
        srcs/ft_min.c
        srcs/ft_putchar.c
        srcs/ft_putchar_fd.c
        srcs/ft_putendl.c
        srcs/ft_putendl_fd.c
        srcs/ft_putnbr.c
        srcs/ft_putnbr_fd.c
        srcs/ft_putstr.c
        srcs/ft_putstr_fd.c
        srcs/ft_qsort.c
        srcs/ft_queue_add.c
        srcs/ft_queue_poll.c
        srcs/ft_safe_atoi.c
        srcs/ft_stack_delall.c
        srcs/ft_stack_init.c
        srcs/ft_stack_pop.c
        srcs/ft_stack_push.c
        srcs/ft_stack_size.c
        srcs/ft_strcat.c
        srcs/ft_strchr.c
        srcs/ft_strclr.c
        srcs/ft_strcmp.c
        srcs/ft_strcpy.c
        srcs/ft_strdel.c
        srcs/ft_strdup.c
        srcs/ft_strequ.c
        srcs/ft_striter.c
        srcs/ft_striteri.c
        srcs/ft_strjoin.c
        srcs/ft_strlcat.c
        srcs/ft_strlcpy.c
        srcs/ft_strlen.c
        srcs/ft_strmap.c
        srcs/ft_strmapi.c
        srcs/ft_strncat.c
        srcs/ft_strncmp.c
        srcs/ft_strncpy.c
        srcs/ft_strndup.c
        srcs/ft_strnequ.c
        srcs/ft_strnew.c
        srcs/ft_strnstr.c
        srcs/ft_strpbrk.c
        srcs/ft_strrchr.c
        srcs/ft_strrev.c
        srcs/ft_strsplit.c
        srcs/ft_strstr.c
        srcs/ft_strsub.c
        srcs/ft_strtol.c
        srcs/ft_strtrim.c
        srcs/ft_tolower.c
        srcs/ft_toupper.c
        srcs/ft_trim_spaces.c
        srcs/ft_voidcpy.c
        srcs/get_next_line.c)
