cmake_minimum_required(VERSION 3.15)
project(ft C)

set(CMAKE_C_STANDARD 11)

include_directories(ft
        includes)
add_library(ft
        srcs/oth/ft_abs.c
        srcs/array/ft_array_add.c
        srcs/array/ft_array_delete_all.c
        srcs/array/ft_array_foreach.c
        srcs/array/ft_array_get.c
        srcs/array/ft_array_init.c
        srcs/array/ft_array_insert.c
        srcs/array/ft_array_new.c
        srcs/array/ft_array_remove.c
        srcs/array/ft_array_remove_all.c
        srcs/array/ft_array_size.c
        srcs/str/ft_atoi.c
        srcs/oth/ft_bubble_sort.c
        srcs/mem/ft_bzero.c
        srcs/mem/ft_calloc.c
        srcs/oth/ft_getc.c
        srcs/mem/ft_intmove.c
        srcs/str/ft_isalnum.c
        srcs/str/ft_isalpha.c
        srcs/str/ft_isascii.c
        srcs/str/ft_isdigit.c
        srcs/str/ft_isprint.c
        srcs/str/ft_isspace.c
        srcs/str/ft_itoa.c
        srcs/lst/ft_lstadd.c
        srcs/lst/ft_lstadd_back.c
        srcs/lst/ft_lstaddblank.c
        srcs/lst/ft_lstaddrevsorted.c
        srcs/lst/ft_lstaddsorted.c
        srcs/lst/ft_lstdel.c
        srcs/lst/ft_lstdelone.c
        srcs/lst/ft_lstfind.c
        srcs/lst/ft_lstget.c
        srcs/lst/ft_lstiter.c
        srcs/lst/ft_lstmap.c
        srcs/lst/ft_lstnew.c
        srcs/lst/ft_lstnewblank.c
        srcs/lst/ft_lstremove_if.c
        srcs/lst/ft_lstsize.c
        srcs/oth/ft_max.c
        srcs/mem/ft_memalloc.c
        srcs/mem/ft_memccpy.c
        srcs/mem/ft_memchr.c
        srcs/mem/ft_memcmp.c
        srcs/mem/ft_memcpy.c
        srcs/mem/ft_memdel.c
        srcs/mem/ft_memmove.c
        srcs/mem/ft_memndup.c
        srcs/mem/ft_memrealloc.c
        srcs/mem/ft_memset.c
        srcs/oth/ft_min.c
        srcs/out/ft_putchar.c
        srcs/out/ft_putchar_fd.c
        srcs/out/ft_putendl.c
        srcs/out/ft_putendl_fd.c
        srcs/out/ft_putnbr.c
        srcs/out/ft_putnbr_fd.c
        srcs/out/ft_putstr.c
        srcs/out/ft_putstr_fd.c
        srcs/oth/ft_qsort.c
        srcs/oth/ft_queue_add.c
        srcs/oth/ft_queue_poll.c
        srcs/str/ft_safe_atoi.c
        srcs/oth/ft_stack_delall.c
        srcs/oth/ft_stack_init.c
        srcs/oth/ft_stack_pop.c
        srcs/oth/ft_stack_push.c
        srcs/oth/ft_stack_size.c
        srcs/str/ft_strcat.c
        srcs/str/ft_strchr.c
        srcs/str/ft_strclr.c
        srcs/str/ft_strcmp.c
        srcs/str/ft_strcpy.c
        srcs/str/ft_strdel.c
        srcs/str/ft_strdup.c
        srcs/str/ft_strequ.c
        srcs/str/ft_striter.c
        srcs/str/ft_striteri.c
        srcs/str/ft_strjoin.c
        srcs/str/ft_strlcat.c
        srcs/str/ft_strlcpy.c
        srcs/str/ft_strlen.c
        srcs/str/ft_strmap.c
        srcs/str/ft_strmapi.c
        srcs/str/ft_strncat.c
        srcs/str/ft_strncmp.c
        srcs/str/ft_strncpy.c
        srcs/str/ft_strndup.c
        srcs/str/ft_strnequ.c
        srcs/str/ft_strnew.c
        srcs/str/ft_strnstr.c
        srcs/str/ft_strpbrk.c
        srcs/str/ft_strrchr.c
        srcs/str/ft_strrev.c
        srcs/str/ft_strsplit.c
        srcs/str/ft_strstr.c
        srcs/str/ft_strsub.c
        srcs/str/ft_strtol.c
        srcs/str/ft_strtrim.c
        srcs/str/ft_tolower.c
        srcs/str/ft_toupper.c
        srcs/str/ft_trim_spaces.c
        srcs/mem/ft_voidcpy.c
        srcs/get_next_line/get_next_line.c
        srcs/mem/ft_intlen.c
        srcs/oth/ft_swapvals.c
        srcs/out/ft_putintarray.c
        srcs/str/stringbuffer/ft_sbnew.c
        srcs/str/stringbuffer/ft_sbappendstr.c
        srcs/str/stringbuffer/ft_sbget.c
        srcs/str/stringbuffer/ft_sbappendchar.c
        srcs/str/stringbuffer/ft_sbinit.c
        srcs/str/stringbuffer/ft_sbremove.c
        srcs/str/stringbuffer/ft_sbdelete.c
        srcs/str/stringbuffer/ft_sbclear.c
        srcs/str/stringbuffer/ft_sblen.c
        )
